Update hero section for high-ticket look

--- a/index.html
+++ b/index.html
@@ -30,20 +30,13 @@
   </header>
 
   <main id="top">
-    <section class="hero">
-      <div class="container">
-        <h1>Executive AI Automation<br><span class="accent">Built for DACH B2B</span></h1>
-        <p class="lead">We help CEOs, HR and Managers in Switzerland & Germany deploy <strong>no-code, GPT and automation</strong> to reduce costs, speed up operations and scale—without hiring a big IT team.</p>
-        <div class="cta">
-          <a href="#webinar" class="btn">Join the free executive webinar</a>
-          <a href="#offer" class="btn btn--ghost">High-ticket 1:1 mentoring</a>
-        </div>
-        <ul class="trust">
-          <li>🇨🇭 🇩🇪 Focus: Switzerland & Germany</li>
-          <li>⏱ ROI in 30–90 days</li>
-          <li>🔒 Data safety & compliance</li>
-        </ul>
-      </div>
+    <section class="hero" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%); color: white; padding: 100px 0; text-align: center;">
+  <div class="container">
+    <h1 style="font-size: 48px; font-weight: 800;">Empower Your Company with <span style="color: #007bff;">AI Automation</span></h1>
+    <p style="font-size: 20px; margin-top: 20px; color: #ccc;">We help CEOs, HR and Managers in DACH eliminate IT costs and automate business with no-code AI systems.</p>
+    <a href="#webinar" style="display: inline-block; margin-top: 30px; background: #007bff; color: white; padding: 14px 28px; border-radius: 8px; text-decoration: none; font-weight: 600;">Join Free AI Webinar</a>
+  </div>
+</section>
     </section>
 
     <section id="webinar" class="section alt">
