--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
 
   <main id="top">
     <section class="hero" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%); color: white; padding: 100px 0; text-align: center;">
-  <div class="container">
-    <h1 style="font-size: 48px; font-weight: 800;">Empower Your Company with <span style="color: #007bff;">AI Automation</span></h1>
-    <p style="font-size: 20px; margin-top: 20px; color: #ccc;">We help CEOs, HR and Managers in DACH eliminate IT costs and automate business with no-code AI systems.</p>
-    <a href="#webinar" style="display: inline-block; margin-top: 30px; background: #007bff; color: white; padding: 14px 28px; border-radius: 8px; text-decoration: none; font-weight: 600;">Join Free AI Webinar</a>
-  </div>
-</section>
+      <div class="container">
+        <h1 style="font-size: 48px; font-weight: 800;">Empower Your Company with <span style="color: #007bff;">AI Automation</span></h1>
+        <p style="font-size: 20px; margin-top: 20px; color: #ccc;">We help CEOs, HR and Managers in DACH eliminate IT costs and automate business with no-code AI systems.</p>
+        <a href="#webinar" style="display: inline-block; margin-top: 30px; background: #007bff; color: white; padding: 14px 28px; border-radius: 8px; text-decoration: none; font-weight: 600;">Join Free AI Webinar</a>
+      </div>
     </section>
 
     <section id="webinar" class="section alt">
@@ -50,11 +49,12 @@
           <article class="card">
             <h3>What you’ll learn in 45 minutes</h3>
             <ul class="bullets">
-              <li>💸 Cut operational costs by 20–40% with AI-assisted workflows</li>
-              <li>🧠 Replace repetitive tasks with agent automations (sales, HR, ops)</li>
-              <li>⚙️ No-code + GPT stack that works today (without heavy IT)</li>
-              <li>📊 KPI framework & governance to keep AI safe and compliant</li>
-              <li>🚀 90-day roadmap template you can implement next week</li>
+              <li>How to free up 5–10 hours per week for each key employee without hiring anyone new</li>
+              <li>How to turn chaotic to-do lists into 2–3 simple AI workflows that always run in the background</li>
+              <li>How to make sure every lead, request or case gets a fast, consistent first response — even outside office hours</li>
+              <li>How to cut manual admin work in back office by 20–40% (invoices, onboarding, scheduling, documentation)</li>
+              <li>How to build one “source of truth” for client data so your team stops copying the same info into multiple tools</li>
+              <li>How to launch your first live automation in the next 7 days with the tools you already use</li>
             </ul>
             <div class="mini-note">Recording available for registrants. English language. DACH examples.</div>
           </article>
@@ -129,6 +129,28 @@
       </div>
     </section>
 
+    <!-- NOWA SEK CJA ABOUT -->
+    <section id="about" class="section">
+      <div class="container">
+        <h2>About B2B AI Insights</h2>
+        <p>
+          B2B AI Insights is a boutique advisory focused on executive AI automation for small B2B companies
+          (5–30 employees) in the DACH region.
+        </p>
+        <p>
+          Instead of selling yet another tool, we help your leadership team:
+        </p>
+        <ul class="bullets">
+          <li>choose a simple, safe AI stack that works with your existing systems,</li>
+          <li>redesign a few critical workflows (sales, HR, operations) for automation,</li>
+          <li>set clear KPIs and governance so AI becomes measurable and compliant.</li>
+        </ul>
+        <p>
+          All sessions are run in English with examples and practice tailored to German-speaking markets.
+        </p>
+      </div>
+    </section>
+
     <section id="offer" class="section alt">
       <div class="container">
         <h2>High-ticket 1:1 Mentoring for Companies</h2>
@@ -144,8 +166,11 @@
             <div class="pill">Typical result: 20–40% faster processes</div>
           </article>
           <article class="plan card">
-            <h3>Investment</h3>
-            <p class="price">€5,000–€10,000</p>
+            <h3>Investment &amp; next steps</h3>
+            <p>
+              We scope each project individually based on your team size, processes and risk profile.
+              You receive a fixed project fee (no hourly billing) after a short discovery call and a draft roadmap.
+            </p>
             <p class="muted">Company-wide mentoring 1:1. Limited slots per quarter.</p>
             <a class="btn" href="#contact">Book a discovery call</a>
             <p class="tiny">Invoices with VAT available. NDA on request.</p>
@@ -190,25 +215,26 @@
       </div>
     </section>
 
-    <section class="section alt">
+    <!-- NOWA WERSJA TRUSTED BY -->
+    <section class="section alt" id="trusted">
       <div class="container">
         <h2>Trusted by teams focused on outcomes</h2>
-        <div class="logos">
-          <img src="assets/logo.png" alt="Client 1">
-          <img src="assets/logo.png" alt="Client 2">
-          <img src="assets/logo.png" alt="Client 3">
-          <img src="assets/logo.png" alt="Client 4">
-        </div>
-        <div class="grid">
-          <article class="quote card">
-            <p>“We automated onboarding and saved ~8 hours per hire. Fast. Secure. No heavy IT.”</p>
-            <span>— COO, mid-size B2B (DACH)</span>
-          </article>
-          <article class="quote card">
-            <p>“Clear roadmap and governance. The team finally uses AI with measurable KPIs.”</p>
-            <span>— HR Director, Switzerland</span>
-          </article>
-        </div>
+        <p>
+          We work with small B2B teams (5–30 employees) in the DACH region who care about speed,
+          compliance and clear KPIs — not just “playing” with AI tools.
+        </p>
+
+        <h3>Example outcomes from recent projects</h3>
+        <ul class="bullets">
+          <li>Onboarding and internal training processes reduced from days to hours</li>
+          <li>Manual back-office work (HR / operations / sales support) cut by 20–40%</li>
+          <li>Faster response times for new enquiries without hiring extra staff</li>
+          <li>Clearer governance: which AI tools can be used, with what data and what is logged</li>
+        </ul>
+
+        <p>
+          Want concrete examples for your industry? Ask in the discovery call or webinar Q&amp;A.
+        </p>
       </div>
     </section>
 
