--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav id="menu">
       <a href="#webinar">Webinar</a>
       <a href="#benefits">Benefits</a>
+      <a href="#roi">ROI</a>
       <a href="#offer">Mentoring</a>
       <a href="#plans">Subscription</a>
       <a href="#contact" class="btn btn--small">Contact</a>
@@ -116,10 +117,98 @@
       <div class="container">
         <h2>Executive outcomes (not just tools)</h2>
         <div class="grid">
-          <article class="card"><h3>Lower costs, faster ops</h3><p>Automate busywork across HR, Ops and Sales. Free up 5–10 hours per employee weekly.</p></article>
-          <article class="card"><h3>Small team, big leverage</h3><p>No-code + GPT agents give you IT-level efficiency without building an internal IT team.</p></article>
-          <article class="card"><h3>Governance & safety</h3><p>Permissioning, data boundaries, audit trails — safe and compliant.</p></article>
+          <article class="card">
+            <h3>Lower costs, faster ops</h3>
+            <p>Automate busywork across HR, Ops and Sales. Free up 5–10 hours per employee weekly.</p>
+          </article>
+          <article class="card">
+            <h3>Small team, big leverage</h3>
+            <p>No-code + GPT agents give you IT-level efficiency without building an internal IT team.</p>
+          </article>
+          <article class="card">
+            <h3>Governance & safety</h3>
+            <p>Permissioning, data boundaries, audit trails — safe and compliant.</p>
+          </article>
         </div>
+      </div>
+    </section>
+
+    <!-- ROI -->
+    <section id="roi" class="section alt">
+      <div class="container">
+        <h2>Financial ROI You Can Expect</h2>
+        <p class="muted">
+          Conservative, realistic numbers for small B2B teams (5–30 employees) in the DACH region — not “AI hype”.
+        </p>
+
+        <div class="grid grid--2">
+          <article class="card">
+            <h3>Time saved → direct cost savings</h3>
+            <p>
+              Average loaded cost per hour in DACH: <strong>€40–€70</strong>.<br>
+              If each key employee saves <strong>5–10 hours per week</strong>:
+            </p>
+            <ul class="bullets">
+              <li>Team of 10 → €2,500–€5,000 saved every week</li>
+              <li>€10,000–€20,000 per month</li>
+              <li>€120,000–€240,000 per year</li>
+            </ul>
+            <p>This is only from cutting repetitive admin work (emails, follow-ups, docs, CRM updates).</p>
+          </article>
+
+          <article class="card">
+            <h3>Faster processes, less overhead</h3>
+            <p>
+              Back-office (HR, ops, sales support, documentation) often costs <strong>€12,000–€25,000/month</strong>.
+            </p>
+            <ul class="bullets">
+              <li>20–40% efficiency gain = €2,400–€10,000/month saved</li>
+              <li>Fewer errors, less rework, fewer escalations</li>
+              <li>Shorter time-to-close and faster cashflow</li>
+            </ul>
+          </article>
+        </div>
+
+        <div class="grid grid--2" style="margin-top: 1.5rem;">
+          <article class="card">
+            <h3>Lost leads recovered → extra revenue</h3>
+            <p>
+              Most teams lose 30–55% of inbound leads due to slow replies and no follow-up.
+              With AI-led first response and follow-up:
+            </p>
+            <ul class="bullets">
+              <li>+5–10% conversion uplift on existing leads</li>
+              <li>At €2,000–€5,000 LTV → €50,000–€200,000 extra yearly revenue</li>
+              <li>In high-ticket deals (5–20k €) → up to €800,000 yearly</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Lower IT & contractor spend</h3>
+            <p>No-code AI cuts the need for expensive external development:</p>
+            <ul class="bullets">
+              <li>Less spend on agencies and freelancers (€80–€150/h)</li>
+              <li>Fewer CRM “mini-projects” at €5,000–€20,000 each</li>
+              <li>€5,000–€50,000 yearly saved on IT maintenance and change requests</li>
+            </ul>
+          </article>
+        </div>
+
+        <article class="card" style="margin-top: 1.5rem;">
+          <h3>Total realistic ROI (90–180 days)</h3>
+          <ul class="bullets">
+            <li><strong>Cost savings:</strong> €150,000–€400,000 per year</li>
+            <li><strong>Revenue uplift:</strong> €50,000–€800,000 per year</li>
+            <li><strong>IT cost reduction:</strong> €5,000–€50,000 per year</li>
+          </ul>
+          <p>
+            Combined realistic ROI for a small B2B team:
+            <strong>€200,000–€1,000,000+ yearly impact</strong> once core workflows are automated.
+          </p>
+          <p class="tiny muted">
+            Exact numbers depend on deal size, volume and current process maturity. We calculate a tailored ROI range for your company during the discovery call.
+          </p>
+        </article>
       </div>
     </section>
 
@@ -156,7 +245,7 @@
           </article>
 
           <article class="card">
-            <h3>Investment & next steps</h3>
+            <h3>Investment &amp; next steps</h3>
             <p>We scope each project individually based on team size, workflows and risk profile. You receive a fixed project fee after a short discovery call.</p>
             <p class="muted">Company-wide mentoring 1:1. Limited slots per quarter.</p>
             <a class="btn" href="#contact">Book a discovery call</a>
@@ -172,9 +261,33 @@
       <div class="container">
         <h2>Ongoing subscription (optional)</h2>
         <div class="grid grid--3">
-          <article class="plan card"><h3>Starter</h3><p class="price">€100 / month</p><ul><li>5–10 employees</li><li>Template updates</li><li>Quarterly office hours</li></ul></article>
-          <article class="plan card"><h3>Growth</h3><p class="price">€200 / month</p><ul><li>11–20 employees</li><li>Priority Q&A</li><li>Automation checks</li></ul></article>
-          <article class="plan card"><h3>Scale</h3><p class="price">€300 / month</p><ul><li>21–30 employees</li><li>Playbook refresh</li><li>Security reviews</li></ul></article>
+          <article class="plan card">
+            <h3>Starter</h3>
+            <p class="price">€100 / month</p>
+            <ul>
+              <li>5–10 employees</li>
+              <li>Template updates</li>
+              <li>Quarterly office hours</li>
+            </ul>
+          </article>
+          <article class="plan card">
+            <h3>Growth</h3>
+            <p class="price">€200 / month</p>
+            <ul>
+              <li>11–20 employees</li>
+              <li>Priority Q&amp;A</li>
+              <li>Automation checks</li>
+            </ul>
+          </article>
+          <article class="plan card">
+            <h3>Scale</h3>
+            <p class="price">€300 / month</p>
+            <ul>
+              <li>21–30 employees</li>
+              <li>Playbook refresh</li>
+              <li>Security reviews</li>
+            </ul>
+          </article>
         </div>
         <p class="note">Cancel anytime. Prices excl. VAT.</p>
       </div>
@@ -229,6 +342,7 @@
       <p>© <span id="year"></span> B2B AI Insights — <span class="tiny muted">by Julia Wawrzyniak</span></p>
       <nav class="footer__nav">
         <a href="#webinar">Webinar</a>
+        <a href="#roi">ROI</a>
         <a href="#offer">Mentoring</a>
         <a href="#plans">Subscription</a>
         <a href="#contact">Contact</a>
