--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
   <header class="nav">
-    <a class="logo" href="#top">
-      <img src="assets/logo.png" alt="B2B AI Insights" height="28" />
-    </a>
+ <a class="logo" href="#top">
+  <img src="assets/b2b.jpg" alt="B2B AI Insights" height="32" />
+</a>
     <nav id="menu">
       <a href="#webinar">Webinar</a>
       <a href="#benefits">Benefits</a>
