--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <!-- HERO -->
     <section class="hero" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%); color: white; padding: 100px 0; text-align: center;">
       <div class="container">
-        <h1 style="font-size: 48px; font-weight: 800;">
-          Empower Your Company with <span style="color: #007bff;">AI Automation</span>
-        </h1>
+       <h1 style="font-size: 48px; font-weight: 800; color:#007bff;">
+  Empower Your Company with AI Automation
+</h1>
         <p style="font-size: 20px; margin-top: 20px; color: #ccc;">
           We help CEOs, HR and Managers in DACH eliminate IT costs and automate business with no-code AI systems.
         </p>
