--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="nav">
  <a class="logo" href="#top">
-  <img src="assets/b2b.jpg" alt="B2B AI Insights" height="32" />
+<img src="b2b.jpg" alt="B2B AI Insights" height="32" />
 </a>
     <nav id="menu">
       <a href="#webinar">Webinar</a>
